--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "axios": "^0.27.2",
     "flowbite": "^1.5.2",
     "flowbite-react": "^0.1.6",
     "i18next": "^21.9.0",
     "i18next-browser-languagedetector": "^6.1.5",
+    "pkce-challenge": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.3",
