--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "flowbite-react": "^0.1.6",
     "i18next": "^21.9.0",
     "i18next-browser-languagedetector": "^6.1.5",
+    "js-cookie": "^3.0.1",
     "pkce-challenge": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -33,6 +34,7 @@
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
