--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
         "plugin:react/recommended"
     ],
     "rules": {
+        "@typescript-eslint/no-explicit-any": "off",
         "indent": [
             "error",
             4
