--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front",
+  "name": "bukemes-front",
   "private": true,
   "version": "0.0.0",
   "description": "React frontend for a Booking Content Management System",
@@ -32,6 +32,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.3",
+    "react-multi-date-picker": "^3.3.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.3.0",
     "uuid": "^8.3.2"
   },
@@ -50,7 +52,8 @@
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
-    "vite": "^3.0.0"
+    "vite": "^3.0.0",
+    "vite-plugin-pwa": "^0.12.3"
   },
   "volta": {
     "node": "16.16.0",
