--- a/package.json
+++ b/package.json
@@ -17,17 +17,21 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "test": "jest",
+    "preview": "vite preview --host"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "axios": "^0.27.2",
+    "babel-plugin-add-react-displayname": "^0.0.5",
     "flowbite": "^1.5.2",
     "flowbite-react": "^0.1.6",
     "i18next": "^21.9.0",
     "i18next-browser-languagedetector": "^6.1.5",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
+    "logrocket": "^3.0.1",
+    "logrocket-react": "^5.0.1",
     "pkce-challenge": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,7 +42,10 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
     "@types/js-cookie": "^3.0.2",
+    "@types/logrocket-react": "^3.0.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
@@ -47,10 +54,14 @@
     "@typescript-eslint/parser": "^5.33.0",
     "@vitejs/plugin-react": "^2.0.0",
     "autoprefixer": "^10.4.8",
+    "babel-jest": "^28.1.3",
     "eslint": "^8.21.0",
     "eslint-plugin-react": "^7.30.1",
+    "jest": "^28.1.3",
     "postcss": "^8.4.16",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.1.8",
+    "ts-jest": "^28.0.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vite-plugin-pwa": "^0.12.3"
